# tr-autonomy-2-rxlc

src/install/: local_setup.sh  setup.sh
src/install/solution/share/solution/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/solution/share/solution/cmake/: solutionConfig.cmake
src/install/spinnyrobot/share/spinnyrobot/: package.sh
src/log/: latest_build
src/solution/: CMakeLists.txt  package.xml
src/solution/src/: targetting.cpp  targetting.h
